@@ -83,8 +83,8 @@ VIEW:
 WINDOW:
 WRITE:
 ABS:12.2222
-ABSMAX:1
-ABSMIN:9
+ABSMAX:9
+ABSMIN:1
 ACOS:nan
 ACOSH:3.2010898763691
 ACOT:0.0811223921009
