@@ -1,3 +1,6 @@
+2020-05-10 (0.12.19)
+	Fix ABSMIN/ABSMAX transposed #96
+
 2020-05-09 (0.12.19)
 	COMMON: Fix crash when passing non-array to CHART
 	SDL: show icon in linux build
